[workspace]
resolver = "2"
members = [
    "mcp-coder-rs",
    "mcp-twitter-rs"
]

[workspace.dependencies]
# MCP and async dependencies
async-mcp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# HTTP and networking
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and utilities
walkdir = "2.0"
regex = "1.0"
base64 = "0.21"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MCP Servers Workspace <contact@example.com>"]
repository = "https://github.com/your-org/mcp-servers"
description = "A collection of MCP (Model Context Protocol) server implementations in Rust"