[workspace]
members = ["mcp-coder", "mcp-twitter", "mcp-spider", "mcp-tavily"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MCP Servers Team"]
license = "MIT"
repository = "https://github.com/your-org/mcp-servers"

[workspace.dependencies]
# Core dependencies  
async-mcp = "0.1.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# MCP and RPC
rpc-router = "0.1.3"
clap = { version = "4.5", features = ["derive"] }
signal-hook = "0.3"
maplit = "1"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "multipart"] }
url = { version = "2.5", features = ["serde"] }

# File and data processing
walkdir = "2.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Web scraping and crawling
spider = "1.99"
scraper = "0.17"
robotstxt = "0.2"

# Knowledge graphs
petgraph = "0.6"
