[package]
name = "mcp-coder-rs"
description = "MCP server for code analysis, formatting, and development tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-coder-rs"
path = "src/main.rs"

[lib]
name = "mcp_coder"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"