[package]
name = "mcp-crawl"
description = "MCP server for web crawling and scraping using spider-rs with comprehensive feature support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-crawl"
path = "src/main.rs"

[lib]
name = "mcp_crawl"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

# Spider-rs and related dependencies
spider = { version = "1.99", features = ["serde"] }

# Additional dependencies for enhanced functionality
regex = { workspace = true }
scraper = "0.17"
reqwest = { version = "0.11", features = ["json", "cookies"] }
readability = "0.3.0"
uuid = { workspace = true }

# Enhanced scraping capabilities
selectors = "0.22"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
ego-tree = "0.6"
cssparser = "0.31"
base64 = "0.21"
mime = "0.3"
cookie = "0.17"
html-escape = "0.2"


[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
dotenv = "0.15"

[features]
default = []
