[package]
name = "mcp-crawler"
description = "MCP server for general web crawling and site mapping"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-crawler"
path = "src/main.rs"

[lib]
name = "mcp_crawler"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rpc-router = { workspace = true }
signal-hook = { workspace = true }
maplit = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

# Additional dependencies for crawling
scraper = "0.17"
robotstxt = "0.2"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"