[package]
name = "mcp-filesystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
home = "0.5.9"
clap = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "mcp-filesystem"
path = "src/main.rs"