[package]
name = "mcp-kg"
description = "MCP server for knowledge graph operations and semantic search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-kg"
path = "src/main.rs"

[lib]
name = "mcp_kg"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rpc-router = { workspace = true }
signal-hook = { workspace = true }
maplit = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Additional dependencies for knowledge graphs
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"