[package]
name = "mcp-reddit"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = "0.3"
tracing = "0.1"
url = "2.5.4"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "mcp-reddit"
path = "src/main.rs"
