[package]
name = "mcp-spider"
description = "MCP server for web crawling and scraping using spider-rs with comprehensive feature support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-spider"
path = "src/main.rs"

[lib]
name = "mcp_spider"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

# Spider-rs with stable features - using older compatible version
spider = { version = "1.90", features = ["serde"] }

# Additional dependencies for enhanced functionality  
regex = { workspace = true }
uuid = { workspace = true }
base64 = "0.21"
mime = "0.3"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
dotenv = "0.15"

[features]
default = []
