[package]
name = "mcp-tavily"
description = "MCP server for Tavily search API integration with AI-powered web search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-tavily"
path = "src/main.rs"

[lib]
name = "mcp_tavily"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rpc-router = { workspace = true }
signal-hook = { workspace = true }
maplit = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"