[package]
name = "mcp-tavily"
description = "MCP server for Tavily search API integration with AI-powered web search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-tavily"
path = "src/main.rs"

[lib]
name = "mcp_tavily"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
dotenv = "0.15"
