[package]
name = "mcp-twitter-rs"
description = "MCP server for Twitter/X integration with posting, searching, and analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-twitter-rs"
path = "src/main.rs"

[lib]
name = "mcp_twitter"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
async-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

# Additional dependencies for Twitter API
oauth1 = "0.5"
hmac = "0.12"
sha1 = "0.10"
percent-encoding = "2.0"
mime = "0.3"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
wiremock = "0.5"