[package]
name = "mcp-twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
agent-twitter-client = { git = "https://github.com/distrihub/agent-twitter-client.git", rev = "019a59829af72c9410233529b098e67bb4a568f9" }
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"
url = "2.5.4"
[dev-dependencies]
dotenv = "0.15"

[[bin]]
name = "twitter"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "async"
path = "examples/async.rs"
